<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/musicname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/music_name"
                android:textColor="#771177"
                android:textSize="30sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/current_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/current_status"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="15sp"
                 />
        </LinearLayout>

        <SeekBar
            android:id="@+id/playBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumb="@drawable/scrubber_control_selector_holo"
            android:progressDrawable="@drawable/custom_progress" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/currenttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/_00_00" />

            <TextView
                android:id="@+id/alltime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:text="@string/_00_00" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <Button
                android:id="@+id/pre"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/pre"
                android:textSize="15sp" />

            <Button
                android:id="@+id/start"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/start"
                android:textSize="15sp" />

            <Button
                android:id="@+id/stop"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/stop"
                android:textSize="15sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/pause"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:text="@string/pause"
                android:textSize="15sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/next"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/next"
                android:textSize="15sp" />
        </LinearLayout>

        <com.sec.connection.view.LrcView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@null"
            android:visibility="gone" >

        </ListView>
        
        <LinearLayout 
            android:id="@+id/fling_view_back"
            android:layout_width="300dp"
			android:layout_height="370dp"
			android:layout_gravity="center">
            <com.sec.connection.view.VerticalSeekBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <com.sec.connection.view.FlingView
                android:id="@+id/fling_view"
                android:layout_width="201dp"
                android:layout_height="201dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="48dp"
                android:clickable="false"
                android:visibility="gone"/>
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>
