<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

	<ImageView
	    android:id="@+id/notif_imageView"
	    style="@color/playingcolor"
	    android:layout_width="80dp"
	    android:layout_height="80dp"
	    android:layout_gravity="center"
	    android:src="@drawable/defult" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12dp"
            android:focusable="true"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/notif_musicname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_name"
                android:textColor="@color/playingcolor"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/notif_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/playingcolor"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/notif_artist"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/artist"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/playingcolor"/>
                <TextView
                    android:id="@+id/notif_all_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="24dp"
                    android:layout_toRightOf="@+id/notif_artist"
                    android:text="@string/_00_00"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/playingcolor" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="12dp" >

            <ImageButton
                android:id="@+id/ic_media_previous"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_media_previous"
                android:background="@drawable/ripple"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/ic_media_play"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/ripple"
                android:src="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ic_media_stop"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_media_pause"
                android:background="@drawable/ripple"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ic_media_next"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_media_next"
                android:background="@drawable/ripple"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/finish"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_delete"
                android:background="@drawable/ripple"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
