<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--#00110011-->
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<ImageView
            android:id="@+id/widget_imageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/defult" 
            android:clickable="true"/>
	<LinearLayout 
	    android:layout_width="match_parent" 
	    android:layout_height="110dp" 
	    android:orientation="vertical">

        <LinearLayout 
            android:id="@+id/linearLayout1" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="15dp" 
            android:layout_marginRight="15dp" 
            android:focusable="true" 
            android:orientation="vertical"
            android:layout_marginTop="4dp">

            <TextView 
                android:id="@+id/widget_musicname" 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:ellipsize="marquee" 
                android:focusable="true" 
                android:focusableInTouchMode="true" 
                android:marqueeRepeatLimit="marquee_forever" 
                android:scrollHorizontally="true" 
                android:singleLine="true" 
                android:text="@string/music_name"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceSmall" 
                android:textColor="@color/playingcolor" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/widget_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/playingcolor"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/widget_artist"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/artist"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/playingcolor" />

                    <TextView
                        android:id="@+id/widget_all_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/playingcolor" />

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="15dp" 
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp">

            <ImageButton 
                android:id="@+id/ic_media_previous" 
                android:layout_width="50dp" 
                android:layout_height="50dp" 
                android:layout_gravity="center" 
                android:background="@drawable/background" 
                android:src="@android:drawable/ic_media_previous" />

            <ImageButton 
                android:id="@+id/ic_media_play" 
                android:layout_width="50dp" 
                android:layout_height="50dp" 
                android:layout_marginLeft="5dp"
                android:layout_gravity="center" 
                android:background="@drawable/background" 
                android:src="@android:drawable/ic_media_play" />

            <ImageButton 
                android:id="@+id/ic_media_stop" 
                android:layout_width="50dp" 
                android:layout_height="50dp" 
                android:layout_marginLeft="5dp"
                android:layout_gravity="center" 
                android:background="@drawable/background" 
                android:src="@android:drawable/ic_media_pause" 
                android:visibility="gone" />

            <ImageButton 
                android:id="@+id/ic_media_next" 
                android:layout_width="50dp" 
                android:layout_height="50dp" 
                android:layout_marginLeft="5dp"
                android:layout_gravity="center" 
                android:background="@drawable/background" 
                android:src="@android:drawable/ic_media_next" />


        </LinearLayout>

    </LinearLayout></LinearLayout>

    <ListView
        android:id="@+id/widget_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
    </ListView>

</LinearLayout>
